# Wired

./: CMakeLists.txt  gitignore  qt_web_browser_roadmap.md  resources.qrc
resources/: newtab.html  newtab_incognito.html
src/: adblockinterceptor.cpp  adblockinterceptor.h  bookmarkdialog.cpp  bookmarkdialog.h  bookmarkmanager.cpp  bookmarkmanager.h  bookmarktabwidget.cpp  bookmarktabwidget.h  downloadmanager.cpp  downloadmanager.h  historydialog.cpp  historydialog.h  historymanager.cpp  historymanager.h  historytabwidget.cpp  historytabwidget.h  main.cpp  mainwindow.cpp  mainwindow.h
